--- a/bibliography.bib
+++ b/bibliography.bib
@@ -35,10 +35,58 @@
   url = {https://developer.apple.com/homekit/}
 }
 
-@misc{Samsung2023,
+@misc{SmartThings,
   author = {{Samsung Electronics}},
   title = {SmartThings Developer Documentation},
   year = {2023},
   note = {Accesso il 10 aprile 2025},
-  url = {https://smartthings.developer.samsung.com/}
+  url = {https://developer.smartthings.com/docs/getting-started/architecture-of-smartthings/}
+}
+
+@misc{zigbee-spec,
+  title = {Zigbee Specification},
+  author = {Connectivity Standards Alliance},
+  year = {2024},
+  note = {Accessed: 2025-08-05},
+  url = {https://csa-iot.org/developer-resources/zigbee/}
+}
+
+@misc{zwave-spec,
+  title = {Z-Wave Specification},
+  author = {Z-Wave Alliance},
+  year = {2023},
+  note = {Accessed: 2025-08-05},
+  url = {https://z-wavealliance.org/technology-overview/}
+}
+
+@misc{thread-spec,
+  title = {Thread Technical Overview},
+  author = {Thread Group},
+  year = {2023},
+  note = {Accessed: 2025-08-05},
+  url = {https://www.threadgroup.org/What-is-Thread/Overview}
+}
+
+@misc{wifi6-spec,
+  title = {Wi-Fi CERTIFIED 6 Technology Overview},
+  author = {Wi-Fi Alliance},
+  year = {2022},
+  note = {Accessed: 2025-08-05},
+  url = {https://www.wi-fi.org/discover-wi-fi/wi-fi-certified-6}
+}
+
+@misc{WiFiVsIoT,
+  author    = {Wi-Fi Alliance},
+  title     = {Wi-Fi and the Internet of Things},
+  year      = {2021},
+  note      = {Accessed: 2025-08-05},
+  url       = {https://www.wi-fi.org/internet-things-iot}
+}
+
+@misc{MatterWhitePaper,
+  author    = {Connectivity Standards Alliance},
+  title     = {Matter Overview White Paper},
+  year      = {2023},
+  note      = {Accessed: 2025-08-05},
+  url       = {https://csa-iot.org/wp-content/uploads/2022/03/Matter_Security_and_Privacy_WP_March-2022.pdf}
 }
