--- a/capitoli/cap7.tex
+++ b/capitoli/cap7.tex
@@ -371,7 +371,7 @@ SmartThings, acquisito da Samsung nel 2014, combina legacy e innovazione.
     \item Tablet come controller fissi
 \end{itemize}
 
-\cite{Samsung2023}
+\cite{SmartThings}
 
 \section{Confronto tra soluzioni native}
 
