--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,9 @@
 % Pacchetti necessari
 \usepackage{geometry}
 \usepackage{fancyhdr}
+\usepackage{tikz}
+\usepackage{float}
+\usetikzlibrary{shapes, arrows.meta, positioning}
 \addbibresource{bibliography.bib}
 
 % Margini
